Hooked into the ConversionService associated to the Environment to handle property value decryption at property resolution

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,6 +12,9 @@ server.ssl.key-alias=partners
 server.ssl.key-store-type=jks
 server.ssl.trust-store-type=jks
 
+## 8443
+server.port=[38343433]
+
 ## keysecret
 server.ssl.key-password=[6b6579736563726574]
 
